# ha-semantic-memory

./: .env.example  .gitignore  .python-version  ATTRIBUTION.md  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: startup.md  wrapup.md
blueprints/ha_semantic_memory/: memory_tool.yaml
claude/: CODEBASE_STATE.md  CONTEXT_MEMORY.md  DEPLOYMENT_STANDARDS.md
claude/specs/: README.md
docs/: AGGRESSIVE_MEMORY_PROMPT.md  MODEL_SELECTION.md  SYSTEM_PROMPT.md
launchd/: com.ha-semantic-memory.plist
migration/: migrate_sqlite.py
pyscript/: ha_semantic_memory.py
scripts/: install.sh  ollama-warmup.sh  restart.sh  start.sh  uninstall.sh
server/: auth.py  config.py  db.py  embeddings.py  main.py  models.py
server/routers/: escalation.py  health.py  memory.py
server/services/: escalation_service.py  memory_service.py
systemd/: ha-semantic-memory.service
tests/: conftest.py  test_api.py  test_auth.py  test_e2e.py  test_embeddings.py  test_memory_service.py
